--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "rocket-governor"
-version = "0.0.1-rc.2"
+version = "0.0.1-rc.3"
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Implementation of Governor rate limiter for Rocket"
 documentation = "https://docs.rs/rocket-governor"
 homepage = "https://github.com/kolbma/rocket-governor"
 repository = "https://github.com/kolbma/rocket-governor"
-keywords = ["rocket", "governor", "rate-limit", "rate-limiting", "ratelimit", "guard", "catcher", "web", "framework"]
+keywords = ["rocket", "governor", "rate-limit", "rate-limiting", "ratelimit"]
 categories = ["web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
