--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,5 +29,5 @@ jobs:
           override: true
     - uses: katyo/publish-crates@v1
       with:
-          dry-run: true
+          dry-run: false
           registry-token: ${{ secrets.CRATES_IO_ROCKET_GOVERNOR }}
