chore: use rocket exported log

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ categories = ["web-programming"]
 [dependencies]
 governor = "0.3"
 lazy_static = "1.4"
-log = { version = "0.4", optional = true }
 # rocket = { path = "../rocket/core/lib" }
 # rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5-rc" }
 rocket = "0.5.0-rc.1"
@@ -29,4 +28,4 @@ rocket = "0.5.0-rc.1"
 rocket-governor-derive = { version = "0.0.1-rc.3" }
 
 [features]
-logger = ["log"]
+logger = []
