--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "rocket-governor"
-version = "0.0.1-rc.6"
+name = "rocket_governor"
+version = "0.0.1-rc.7"
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Implementation of Governor rate limiter for Rocket"
-documentation = "https://docs.rs/rocket-governor"
+documentation = "https://docs.rs/rocket_governor"
 homepage = "https://github.com/kolbma/rocket-governor"
 repository = "https://github.com/kolbma/rocket-governor"
 keywords = ["rocket", "governor", "rate-limit", "rate-limiting", "ratelimit"]
@@ -18,14 +18,6 @@ lazy_static = "1.4"
 # rocket = { path = "../rocket/core/lib" }
 # rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5-rc" }
 rocket = "0.5.0-rc.1"
-
-[dev-dependencies]
-#rocket-governor = { path = "../rocket-governor" }
-#rocket-governor = { git = "https://github.com/kolbma/rocket-governor.git" }
-#rocket-governor = { version = "0.0.1-rc.2" }
-# rocket-governor-derive = { path = "../rocket-governor-derive" }
-#rocket-governor-derive = { git = "https://github.com/kolbma/rocket-governor-derive.git" }
-rocket-governor-derive = { version = "0.0.1-rc.3" }
 
 [features]
 logger = []
