--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,19 +8,118 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_MSRV_TOOLCHAIN: 1.69.0
 
 jobs:
-  build:
-
+  source-check:
     runs-on: ubuntu-latest
 
+    permissions:
+      checks: write
+      contents: read
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Build release
-      run: cargo build --release --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Run tests
-      run: cargo test --verbose --all-features 
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        components: clippy, rustfmt
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
+    - uses: actions-rs/cargo@v1
+      with:
+        command: fmt
+        args: --check
+
+  cargo-doc-stable:
+    runs-on: ubuntu-latest
+    needs: source-check
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: doc
+        args: --verbose --all-features --no-deps
+
+  cargo-doc-msrv:
+    runs-on: ubuntu-latest
+    needs: source-check
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: doc
+        args: --verbose --all-features --no-deps
+
+  build-stable:
+    runs-on: ubuntu-latest
+    needs: source-check
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: --verbose --release
+
+  test-stable:
+    runs-on: ubuntu-latest
+    needs: build-stable
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --verbose
+
+  build-msrv:
+    runs-on: ubuntu-latest
+    needs: build-stable
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: --verbose --release
+
+  test-msrv:
+    runs-on: ubuntu-latest
+    needs: build-msrv
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --verbose
