build!: release v0.2.0-rc.1
- compatibility with rocket v0.5
- rust edition 2021 (like rocket)
- rust msrv 1.69.0
- deps: governor 0.6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rocket-governor"
-version = "0.1.0-rc.4"
-edition = "2018"
+version = "0.2.0-rc.1"
+edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Implementation of Governor rate limiter for Rocket"
 documentation = "https://docs.rs/rocket-governor"
@@ -13,18 +13,19 @@ categories = ["web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package.metadata]
-# minimum supported rust version 1.59.0 because of 3rd level dependency dashmap
-msrv = "1.59.0"
+# minimum supported rust version 1.67.0 because of 3rd level dependency crate rocket->time
+# minimum supported rust version 1.69.0 because of incompatibility in macro expansion
+msrv = "1.69.0"
 
 [package.metadata.docs.rs]
 all-features = true # get api doc for all features on https://docs.rs
 
 [dependencies]
-governor = "0.4"
+governor = "0.6"
 lazy_static = "1.4"
 # rocket = { path = "../rocket/core/lib" }
 # rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5-rc" }
-rocket = "0.5.0-rc.2"
+rocket = "0.5"
 
 [features]
 limit_info = []
