--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,7 +77,7 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: build
-        args: --verbose --release
+        args: --verbose --release --all-features
 
   test-stable:
     runs-on: ubuntu-latest
@@ -94,6 +94,21 @@ jobs:
         command: test
         args: --verbose
 
+  test-stable-all-features:
+    runs-on: ubuntu-latest
+    needs: test-stable
+
+    steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        default: true
+    - uses: actions/checkout@v4
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --verbose --all-features
+
   build-msrv:
     runs-on: ubuntu-latest
     needs: build-stable
@@ -107,9 +122,9 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: build
-        args: --verbose --release
+        args: --verbose --release --all-features
 
-  test-msrv:
+  test-msrv-all-features:
     runs-on: ubuntu-latest
     needs: build-msrv
 
@@ -122,4 +137,4 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: test
-        args: --verbose
+        args: --verbose --all-features
