--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions-rs/toolchain@v1
-      # with:
-      #     toolchain: 1.69.0
-      #     override: true
+      with:
+          toolchain: stable
+          override: true
     - uses: katyo/publish-crates@v2
       with:
           dry-run: false
