build: release v0.2.0-rc.2
- reduced sub-dependencies by limiting feature set

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket-governor"
-version = "0.2.0-rc.1"
+version = "0.2.0-rc.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Implementation of Governor rate limiter for Rocket"
@@ -21,11 +21,11 @@ msrv = "1.69.0"
 all-features = true # get api doc for all features on https://docs.rs
 
 [dependencies]
-governor = "0.6"
+governor = { version = "0.6", default-features = false, features = ["std"] }
 lazy_static = "1.4"
 # rocket = { path = "../rocket/core/lib" }
-# rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5-rc" }
-rocket = "0.5"
+# rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "v0.5" }
+rocket = { version = "0.5", default-features = false }
 
 [features]
 limit_info = []
