--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,122 +19,96 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
         components: clippy, rustfmt
-        default: true
     - uses: actions/checkout@v4
     - uses: actions-rs/clippy-check@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-features
-    - uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --check
+    - run: cargo fmt --check
 
   cargo-doc-stable:
     runs-on: ubuntu-latest
     needs: source-check
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
-        default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: doc
-        args: --verbose --all-features --no-deps
+    - run: cargo doc --verbose --all-features --no-deps
 
   cargo-doc-msrv:
     runs-on: ubuntu-latest
     needs: source-check
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
-        default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: doc
-        args: --verbose --all-features --no-deps
+    - run: cargo doc --verbose --all-features --no-deps
 
   build-stable:
     runs-on: ubuntu-latest
     needs: source-check
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
-        default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --verbose --release --all-features
+    - run: cargo --version
+    - run: cargo build --verbose --release --all-features
 
   test-stable:
     runs-on: ubuntu-latest
     needs: build-stable
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
         default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --verbose
+    - run: cargo test --verbose
 
   test-stable-all-features:
     runs-on: ubuntu-latest
     needs: test-stable
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
         default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --verbose --all-features
+    - run: cargo test --verbose --all-features
 
   build-msrv:
     runs-on: ubuntu-latest
     needs: build-stable
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
         default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --verbose --release --all-features
+    - run: cargo --version
+    - run: cargo build --verbose --release --all-features
 
   test-msrv-all-features:
     runs-on: ubuntu-latest
     needs: build-msrv
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ env.RUST_MSRV_TOOLCHAIN }}
         default: true
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --verbose --all-features
+    - run: cargo test --verbose --all-features
